# halo2-plonky2-verifier

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: test.yml
macro/: Cargo.toml
macro/src/: lib.rs
src/: fibonacci_stark.rs  lib.rs  witness.rs
src/challenger/: mod.rs
src/fields/: fp.rs  fp2.rs  mod.rs
src/fri/: mod.rs
src/goldilocks/: base.rs  extension.rs  field.rs  mod.rs
src/hash/: mod.rs
src/hash/poseidon/: chip.rs  hash.rs  mod.rs  permutation.rs
src/hash/poseidon_bn254/: hash.rs  mod.rs  permutation.rs
src/merkle/: mod.rs
src/stark/: mod.rs
src/util/: context_tree.rs  mod.rs  num_advice.rs
src/witness/: mod.rs
test_data/: fibonacci_proof.json
verifier/: Cargo.toml
verifier/src/: lib.rs
verifier/src/challenger/: mod.rs
verifier/src/field/: bool.rs  mod.rs  native.rs
verifier/src/field/goldilocks/: base.rs  extension.rs
verifier/src/fri/: mod.rs
verifier/src/goldilocks/: base.rs  extension.rs
verifier/src/hash/: mod.rs
verifier/src/hash/poseidon/: hash.rs  permutation.rs
verifier/src/hash/poseidon_bn254/: hash.rs  permutation.rs
verifier/src/merkle/: mod.rs
verifier/src/stark/: mod.rs
verifier/src/test_util/: fibonacci_stark.rs  mod.rs
verifier/src/util/: context_tree.rs  context_wrapper.rs  mod.rs
verifier/src/witness/: mod.rs
