[package]
name = "halo2-fri-verifier"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ff = { version = "0.13.0" }

halo2-base = { git = "https://github.com/axiom-crypto/halo2-lib", branch = "community-edition"}
halo2-ecc = { git = "https://github.com/axiom-crypto/halo2-lib", branch = "community-edition" }

itertools = { version = "0.11.0", default-features = false }
plonky2 = { git = "https://github.com/0xpolygonzero/plonky2" }
starky = { git = "https://github.com/0xpolygonzero/plonky2" }
unroll = { version = "0.1.5", default-features = false }

[dev-dependencies]
anyhow = { version = "1.0.40", default-features = false }
env_logger = { version = "0.9.0", default-features = false }
rand = "0.8.5"
rand_core = { version = "0.6", default-features = false }
serde_json = "1.0"
tiny-keccak = "2.0.2"

[patch."https://github.com/0xpolygonzero/plonky2"]
plonky2 = { path = "../plonky2/plonky2" }
starky = { path = "../plonky2/starky" }

[patch."https://github.com/axiom-crypto/halo2-lib"]
halo2-base = { path = "../halo2-lib/halo2-base" }
halo2-ecc = { path = "../halo2-lib/halo2-ecc" }
