[package]
name = "halo2-plonky2-verifier"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { version = "1.0.40", default-features = false }
itertools = { version = "0.11.0", default-features = false }
unroll = { version = "0.1.5", default-features = false }
log = { version = "0.4.14" }

ff = { version = "0.13.0" }

halo2-base = { git = "https://github.com/axiom-crypto/halo2-lib", branch = "community-edition"}
halo2-ecc = { git = "https://github.com/axiom-crypto/halo2-lib", branch = "community-edition" }

plonky2 = { git = "https://github.com/0xpolygonzero/plonky2" }
starky = { git = "https://github.com/0xpolygonzero/plonky2" }

plonky2x = { git = "https://github.com/succinctlabs/succinctx" }
inferno = { version = "0.11.19" }

verifier_macro = { path = "../macro" }

[dev-dependencies]
env_logger = { version = "0.9.0", default-features = false }
rand = "0.8.5"
rand_core = { version = "0.6", default-features = false }
serde_json = "1.0"
